<resources>
    <string name="app_name">reyortiz_retrofitMovil</string>
    <string name="delete">Delete</string>
    <string name="asientos">Asientos:</string>
    <string name="mesa">Mesa:</string>
    <string name="mesas">Mesas</string>
    <string name="detalle">Detalle mesa</string>
    <string name="fecha">Fecha</string>
    <string name="customer_id">Customer ID</string>
    <string name="text">text</string>
    <string name="pedidos">Pedidos:</string>
    <string name="a_adir">Añadir</string>
    <string name="introduce_el_n_mero_de_cliente">Introduce el número de cliente para añadir un pedido</string>

</resources>