<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.retrofitMovil.ui.pantallaDetalle.DetalleActivity">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="0dp">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true"
            >
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/menu_context_bar"
                app:navigationIcon="@drawable/baseline_table_restaurant_24"
                app:title="@string/detalle" />

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPedidos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/marginXS"
        android:layout_marginBottom="@dimen/marginXS"
        android:layout_marginTop="@dimen/marginMedium"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton"
        app:spanCount="1" />

    <TextView
        android:id="@+id/textMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginMedium"
        android:layout_marginTop="@dimen/marginSmall"
        android:text="@string/mesa"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />

    <TextView
        android:id="@+id/numMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSmall"
        android:layout_marginStart="@dimen/marginXXS"
        android:text="@string/text"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textMesa"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />


    <TextView
        android:id="@+id/textSeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSmall"
        android:layout_marginEnd="@dimen/marginXXS"
        android:text="@string/asientos"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/numAsientos"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />

    <TextView
        android:id="@+id/numAsientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSmall"
        android:layout_marginEnd="@dimen/marginMedium"
        android:text="@string/text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginSmall"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginEnd="@dimen/marginSmall"
        android:clickable="false"
        android:ems="15"
        android:focusable="false"
        android:text="@string/introduce_el_n_mero_de_cliente"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />

    <EditText
        android:id="@+id/editCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginLarge"
        android:layout_marginTop="@dimen/marginSmall"
        android:layout_marginEnd="@dimen/marginLarge"
        android:ems="10"
        android:inputType="number"
        android:text="@string/customer_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdd" />

    <TextView
        android:id="@+id/textPedidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginMedium"
        android:layout_marginBottom="@dimen/marginXS"
        android:text="@string/pedidos"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rvPedidos"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginTop="@dimen/marginMedium"
        android:layout_marginEnd="@dimen/marginXL"
        android:text="@string/a_adir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCustomer" />


</androidx.constraintlayout.widget.ConstraintLayout>